2010-10-05  Nat Duca  <nduca@chromium.org>

Reviewed by James Robinson.

        [chromium] Handle composited root layer invalidations in screenspace,
        fixing the disappearing scrollbar problem.
        https://bugs.webkit.org/show_bug.cgi?id=46864

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::composite):
        (WebKit::WebViewImpl::scrollRootLayerRect):
        (WebKit::WebViewImpl::invalidateRootLayerRect):
        (WebKit::WebViewImpl::doComposite):

Canonical link: https://commits.webkit.org/59768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69162 268f45cc-cd09-0410-ab3c-d52691b4dbfc